@@ -86,6 +86,7 @@ void addVectorOf(pybind11::module_& m, const char* className) {
         .def_static("unit", &Vec::unit, rdoc::unit)
     ;
     regina::python::add_output(c);
+    regina::python::add_tight_encoding(c);
     regina::python::add_eq_operators(c, rdoc::__eq, rdoc::__ne);
 
     regina::python::add_global_swap<Vec>(m, rdoc::global_swap);
